--- a/charts/incubator/frigate/values.yaml
+++ b/charts/incubator/frigate/values.yaml
@@ -115,22 +115,22 @@ frigate:
     # - This value can be set via MQTT and will be updated in startup based on retained value
     enabled: true
     # -- Optional: width of the frame for the input with the detect role
-    width: 1280
+    width:
     # -- Optional: height of the frame for the input with the detect role
-    height: 720
+    height:
     # -- Optional: desired fps for your camera for the input with the detect role
     # - NOTE: Recommended value of 5. Ideally, try and reduce your FPS on the camera.
-    fps: 5
+    fps:
     # -- Optional: Number of frames without a detection before frigate considers an object to be gone. (default: 5x the frame rate)
-    max_disappeared: 25
+    max_disappeared:
     # -- Optional: Configuration for stationary object tracking
     stationary:
       # -- Optional: Frequency for confirming stationary objects
       # - When set to 0, object detection will not confirm stationary objects until movement is detected.
       # - If set to 10, object detection will run to confirm the object still exists on every 10th frame.
-      interval: 0
+      interval:
       # -- Optional: Number of frames without a position change for an object to be considered stationary (default: 10x the frame rate or 10s)
-      threshold: 50
+      threshold:
       # -- Optional: Define a maximum number of frames for tracking a stationary object (default: not set, track forever)
       # - This can help with false positives for objects that should only be stationary for a limited amount of time.
       # - It can also be used to disable stationary object tracking. For example, you may want to set a value for person, but leave
