--- a/charts/incubator/frigate/values.yaml
+++ b/charts/incubator/frigate/values.yaml
@@ -184,7 +184,7 @@ frigate:
     # -- Optional: The threshold passed to cv2.threshold to determine if a pixel is different enough to be counted as motion.
     # - Increasing this value will make motion detection less sensitive and decreasing it will make motion detection more sensitive.
     # - The value should be between 1 and 255.
-    threshold: 25
+    threshold:
     # -- Optional: Minimum size in pixels in the resized motion image that counts as motion
     # - Increasing this value will prevent smaller areas of motion from being detected. Decreasing will
     # - make motion detection more sensitive to smaller moving objects.
@@ -192,29 +192,29 @@ frigate:
     # - 15 - high sensitivity
     # - 30 - medium sensitivity
     # - 50 - low sensitivity
-    contour_area: 30
+    contour_area:
     # -- Optional: Alpha value passed to cv2.accumulateWeighted when averaging the motion delta across multiple frames
     # - Higher values mean the current frame impacts the delta a lot, and a single raindrop may register as motion.
     # - Too low and a fast moving person wont be detected as motion.
-    delta_alpha: "0.2"
+    delta_alpha:
     # -- Optional: Alpha value passed to cv2.accumulateWeighted when averaging frames to determine the background
     # - Higher values mean the current frame impacts the average a lot, and a new object will be averaged into the background faster.
     # - Low values will cause things like moving shadows to be detected as motion for longer.
     # - https://www.geeksforgeeks.org/background-subtraction-in-an-image-using-concept-of-running-average/
-    frame_alpha: "0.2"
+    frame_alpha:
     # -- Optional: Height of the resized motion frame  (default: 50)
     # - This operates as an efficient blur alternative. Higher values will result in more granular motion detection at the expense
     # - of higher CPU usage. Lower values result in less CPU, but small changes may not register as motion.
-    frame_height: 50
+    frame_height:
     # -- Optional: motion mask
     # - NOTE: see docs for more detailed info on creating masks
-    mask: 0,900,1080,900,1080,1920,0,1920
+    mask:
     # -- Optional: improve contrast
     # - Enables dynamic contrast improvement. This should help improve night detections at the cost of making motion detection more sensitive
     # - for daytime.
     improve_contrast: false
     # -- Optional: Delay when updating camera motion through MQTT from ON -> OFF
-    mqtt_off_delay: 30
+    mqtt_off_delay:
 
   record:
     # -- Enable it to add the configuration in the config file
