--- a/charts/incubator/frigate/values.yaml
+++ b/charts/incubator/frigate/values.yaml
@@ -302,8 +302,9 @@ frigate:
       default: 10
       # -- Optional: Per object retention days
       objects:
-        - object: person
-          days: 15
+        []
+        # - object: person
+        #   days: 15
 
   rtmp:
     # -- Enable it to add the configuration in the config file
@@ -317,10 +318,10 @@ frigate:
     # -- Optional: Set the height of the live stream. (default: 720)
     # - This must be less than or equal to the height of the detect stream. Lower resolutions
     # - reduce bandwidth required for viewing the live stream. Width is computed to match known aspect ratio.
-    height: 720
+    height: null
     # -- Optional: Set the encode quality of the live stream (default: shown below)
     # - 1 is the highest quality, and 31 is the lowest. Lower quality feeds utilize less CPU resources.
-    quality: 8
+    quality: null
 
   timestamp_style:
     # -- Enable it to add the configuration in the config file
