--- a/charts/incubator/frigate/values.yaml
+++ b/charts/incubator/frigate/values.yaml
@@ -365,19 +365,19 @@ frigate:
               - detect
               - rtmp
             # -- Optional: stream specific global args
-            global_args:
+            global_args: ""
             # - Optional: stream specific hwaccel args
-            hwaccel_args:
+            hwaccel_args: ""
             # - Optional: stream specific input args
-            input_args:
+            input_args: ""
         # -- Optional: camera specific global args
-        global_args:
+        global_args: ""
         # -- Optional: camera specific hwaccel args
-        hwaccel_args:
+        hwaccel_args: ""
         # -- Optional: camera specific input args
-        input_args:
+        input_args: ""
         # -- Optional: camera specific output args
-        output_args:
+        output_args: ""
       # -- Optional: timeout for highest scoring image before allowing it
       # - to be replaced by a newer image.
       best_image_timeout: 60
@@ -391,14 +391,16 @@ frigate:
           coordinates: 545,1077,747,939,788,805
           # -- Optional: List of objects that can trigger this zone (default: all tracked objects)
           objects:
-            - person
+            []
+            # - person
           # -- Optional: Zone level object filters.
           # -NOTE: The global and camera filters are applied upstream.
           filters:
-            - object: person
-              min_area: 5000
-              max_area: 100000
-              threshold: "0.7"
+            []
+            # - object: person
+            #   min_area: null
+            #   max_area: null
+            #   threshold: ""
       # -- Optional: Configuration for the jpg snapshots published via MQTT
       mqtt:
         # -- Enable it to add the configuration in the config file
@@ -414,9 +416,9 @@ frigate:
         # -- Optional: crop the snapshot
         crop: true
         # -- Optional: height to resize the snapshot to
-        height: 270
+        height: null
         # -- Optional: jpeg encode quality
-        quality: 70
+        quality: null
         # -- Optional: Restrict mqtt messages to objects that entered any of the listed zones
         required_zones: []
       # -- Optional: Configuration for how camera is handled in the GUI.
@@ -425,7 +427,7 @@ frigate:
         render_config: false
         # -- Optional: Adjust sort order of cameras in the UI. Larger numbers come later
         # - By default the cameras are sorted alphabetically.
-        order: 0
+        order: null
         # -- Optional: Whether or not to show the camera in the Frigate UI
         dashboard: true
 
