--- a/charts/incubator/frigate/questions.yaml
+++ b/charts/incubator/frigate/questions.yaml
@@ -342,7 +342,7 @@ questions:
                       schema:
                         additional_attrs: true
                         type: dict
-                        attrs:
+                        attrs: &ffmpeg_output_args
                           - variable: detect
                             label: Detect
                             schema:
@@ -1174,6 +1174,45 @@ questions:
                                                     description: RTMP
                                                   - value: record
                                                     description: Record
+                                      - variable: global_args
+                                        label: Global Args
+                                        description: Camera specific global args
+                                        schema:
+                                          type: string
+                                          default: ""
+                                      - variable: hwaccel_args
+                                        label: HW Acceleration Args
+                                        description: Camera specific hwaccel args
+                                        schema:
+                                          type: string
+                                          default: ""
+                                      - variable: input_args
+                                        label: Input Args
+                                        description: Camera specific input args
+                                        schema:
+                                          type: string
+                                          default: ""
+                                      - variable: output_args
+                                        label: Output Args
+                                        schema:
+                                          additional_attrs: true
+                                          type: dict
+                                          attrs:
+                                            - variable: detect
+                                              label: Detect
+                                              schema:
+                                                type: string
+                                                default: ""
+                                            - variable: record
+                                              label: Record
+                                              schema:
+                                                type: string
+                                                default: ""
+                                            - variable: rtmp
+                                              label: RTMP
+                                              schema:
+                                                type: string
+                                                default: ""
                           - variable: global_args
                             label: Global Args
                             description: Camera specific global args
@@ -1194,10 +1233,25 @@ questions:
                               default: ""
                           - variable: output_args
                             label: Output Args
-                            description: Camera specific output args
                             schema:
-                              type: string
-                              default: ""
+                              additional_attrs: true
+                              type: dict
+                              attrs:
+                                - variable: detect
+                                  label: Detect
+                                  schema:
+                                    type: string
+                                    default: ""
+                                - variable: record
+                                  label: Record
+                                  schema:
+                                    type: string
+                                    default: ""
+                                - variable: rtmp
+                                  label: RTMP
+                                  schema:
+                                    type: string
+                                    default: ""
                     - variable: best_image_timeout
                       label: Best Image Timeout
                       description: Timeout for highest scoring image before allowing it to be replaced by a newer image.
