--- a/charts/incubator/frigate/values.yaml
+++ b/charts/incubator/frigate/values.yaml
@@ -94,7 +94,7 @@ frigate:
     # -- Enable it to add the configuration in the config file
     render_config: true
     # -- Optional: global ffmpeg args
-    global_args: somrthing
+    global_args: ""
     # -- Optional: global input args
     input_args: ""
     # -- Optional: global hwaccel args
@@ -376,7 +376,7 @@ frigate:
               record: ""
               rtmp: ""
         # -- Optional: camera specific global args
-        global_args: fas
+        global_args: ""
         # -- Optional: camera specific hwaccel args
         hwaccel_args: ""
         # -- Optional: camera specific input args
