fix(dependencies): don't run manifest Manager on most dependency apps.

--- a/charts/dependency/promtail/values.yaml
+++ b/charts/dependency/promtail/values.yaml
@@ -253,3 +253,6 @@ config:
     scrape_configs:
       {{- tpl .Values.config.snippets.scrapeConfigs . | nindent 2 }}
       {{- tpl .Values.config.snippets.extraScrapeConfigs . | nindent 2 }}
+
+manifests:
+  enabled: false
