--- a/charts/incubator/ersatztv/values.yaml
+++ b/charts/incubator/ersatztv/values.yaml
@@ -14,7 +14,12 @@ vaapiImage:
 imageSelector: image
 
 securityContext:
+  runAsNonRoot: false
   readOnlyRootFilesystem: false
+
+podSecurityContext:
+  runAsUser: 0
+  runAsGroup: 0
 
 service:
   main:
