--- a/charts/stable/sonarr/questions.yaml
+++ b/charts/stable/sonarr/questions.yaml
@@ -20,7 +20,7 @@ questions:
           description: Select the default auth method, choose External to disable basic/form auth.
           schema:
             type: string
-            default: None
+            default: Forms
             enum:
               - value: None
                 description: None
