set default auth to Forms

--- a/charts/stable/lidarr/questions.yaml
+++ b/charts/stable/lidarr/questions.yaml
@@ -20,7 +20,7 @@ questions:
           description: Select the default auth method, choose External to disable basic/form auth.
           schema:
             type: string
-            default: External
+            default: Forms
             enum:
               - value: Basic
                 description: Basic
