set default auth to Forms

--- a/charts/stable/prowlarr/values.yaml
+++ b/charts/stable/prowlarr/values.yaml
@@ -7,7 +7,7 @@ securityContext:
   readOnlyRootFilesystem: false
 
 env:
-  PROWLARR__AUTHENTICATION_METHOD: External
+  PROWLARR__AUTHENTICATION_METHOD: Forms
 
 service:
   main:
