add group ersatztv

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -260,7 +260,7 @@
       "matchDatasources": ["docker"],
       "matchPackagePrefixes": ["tccr.io/truecharts/rickroll"],
       "groupName": "rickroll",
-    },    
+    },
     {
       "matchDatasources": ["docker"],
       "matchPackagePrefixes": ["tccr.io/truecharts/docspell"],
@@ -280,6 +280,11 @@
       "matchDatasources": ["docker"],
       "matchPackagePrefixes": ["tccr.io/truecharts/rdesktop"],
       "groupName": "rdesktop",
+    },
+    {
+      "matchDatasources": ["docker"],
+      "matchPackagePrefixes": ["tccr.io/truecharts/ersatztv"],
+      "groupName": "ersatztv",
     }
   ]
 }
