--- a/charts/stable/cloudflared/values.yaml
+++ b/charts/stable/cloudflared/values.yaml
@@ -3,7 +3,7 @@ image:
   pullPolicy: IfNotPresent
   tag: 2022.12.1@sha256:34a137bfc9bad52d83f95d203ea8bdee2f2233ae3b2c52f0dd59e2b664471c37
 
-extraArgs:
+args:
   - tunnel
   - --no-autoupdate
   - run
