--- a/charts/stable/cloudflared/ci/test-values.yaml
+++ b/charts/stable/cloudflared/ci/test-values.yaml
@@ -1,3 +1,3 @@
 # With the bellow we test both container starts and that tpl is working inside extraArgs list
-extraArgs: ["tunnel", "--no-autoupdate", "{{ .Values.testTpl }}"]
+args: ["tunnel", "--no-autoupdate", "{{ .Values.testTpl }}"]
 testTpl: "--hello-world"
