--- a/charts/stable/sonarr/values.yaml
+++ b/charts/stable/sonarr/values.yaml
@@ -3,15 +3,18 @@ image:
   pullPolicy: IfNotPresent
   tag: 3.0.9.1549@sha256:294b6288d91346f6e65f8cb344b42d17c97b3ee7ada501d77307088f79a8dc15
 
-env:
-  SONARR__AUTHENTICATION_METHOD: Forms
+sonarr:
+  auth_method: ""
+
+envFrom:
+  - secretRef:
+      name: '{{ include "tc.common.names.fullname" . }}-secret'
 
 service:
   main:
     ports:
       main:
         port: 8989
-        targetPort: 8989
 
 probes:
   liveness:
@@ -38,6 +41,13 @@ persistence:
   config:
     enabled: true
     mountPath: "/config"
+
+# might be supported on sonarr v4 upon released
+postgresql:
+  enabled: false
+  existingSecret: dbcreds
+  postgresqlDatabase: sonarr
+  postgresqlUsername: sonarr
 
 portal:
   enabled: true
