--- a/charts/stable/lidarr/values.yaml
+++ b/charts/stable/lidarr/values.yaml
@@ -3,8 +3,12 @@ image:
   pullPolicy: IfNotPresent
   tag: 1.1.1.2762@sha256:95c9520e6f5dbba909f1a6a6214fcf10de007fea4eb88fad30c3306238e21252
 
-env:
-  LIDARR__AUTHENTICATION_METHOD: Forms
+lidarr:
+  auth_method: ""
+
+envFrom:
+  - secretRef:
+      name: '{{ include "tc.common.names.fullname" . }}-secret'
 
 securityContext:
   readOnlyRootFilesystem: false
@@ -14,7 +18,6 @@ service:
     ports:
       main:
         port: 8686
-        targetPort: 8686
 
 probes:
   liveness:
@@ -41,6 +44,12 @@ persistence:
   config:
     enabled: true
     mountPath: "/config"
+
+postgresql:
+  enabled: true
+  existingSecret: dbcreds
+  postgresqlDatabase: lidarr
+  postgresqlUsername: lidarr
 
 portal:
   enabled: true
