add postgres support + auth gui

--- a/charts/stable/radarr/questions.yaml
+++ b/charts/stable/radarr/questions.yaml
@@ -8,24 +8,26 @@ questions:
 # Include{replicas}
 # Include{replica1}
 # Include{controllerExpertExtraArgs}
-  - variable: env
-    group: "App Configuration"
-    label: "Image Environment"
+  - variable: radarr
+    group: App Configuration
+    label: Radarr Configuration
     schema:
       additional_attrs: true
       type: dict
       attrs:
-        - variable: RADARR__AUTHENTICATION_METHOD
-          label: Radarr Authentication Method
-          description: Select the default auth method, choose External to disable basic/form auth.
+        - variable: auth_method
+          label: Auth Method
+          description: Sets the auth method.
           schema:
             type: string
-            default: External
+            default: ""
             enum:
-              - value: Basic
-                description: Basic
+              - value: ""
+                description: In-App Setting
               - value: External
                 description: External
+              - value: Basic
+                description: Basic
               - value: Forms
                 description: Forms
 # Include{containerConfig}
