--- a/charts/stable/radarr/Chart.yaml
+++ b/charts/stable/radarr/Chart.yaml
@@ -4,6 +4,10 @@ dependencies:
   - name: common
     repository: https://library-charts.truecharts.org
     version: 11.1.2
+  - condition: postgresql.enabled
+    name: postgresql
+    repository: https://charts.truecharts.org/
+    version: 11.0.18
 deprecated: false
 description: "A fork of Sonarr to work with movies à la Couchpotato"
 home: https://truecharts.org/charts/stable/radarr
@@ -22,7 +26,7 @@ sources:
   - https://github.com/truecharts/charts/tree/master/charts/stable/radarr
   - https://github.com/Radarr/Radarr
 type: application
-version: 13.0.13
+version: 14.0.0
 annotations:
   truecharts.org/catagories: |
     - media
