--- a/charts/stable/radarr/values.yaml
+++ b/charts/stable/radarr/values.yaml
@@ -3,18 +3,21 @@ image:
   pullPolicy: IfNotPresent
   tag: 4.3.2.6857@sha256:3fbed833aabee76fc6b55adefb0c308c904fe90c18243eede369b6ee645ad00e
 
-env:
-  RADARR__AUTHENTICATION_METHOD: External
-
 securityContext:
   readOnlyRootFilesystem: false
+
+radarr:
+  auth_method: ""
+
+envFrom:
+  - secretRef:
+      name: '{{ include "tc.common.names.fullname" . }}-secret'
 
 service:
   main:
     ports:
       main:
         port: 7878
-        targetPort: 7878
 
 probes:
   liveness:
@@ -41,6 +44,12 @@ persistence:
   config:
     enabled: true
     mountPath: "/config"
+
+postgresql:
+  enabled: true
+  existingSecret: dbcreds
+  postgresqlDatabase: radarr
+  postgresqlUsername: radarr
 
 portal:
   enabled: true
