fix(plexanisync): set a max char limit, as it seems the default is 1024

--- a/charts/incubator/plexanisync/questions.yaml
+++ b/charts/incubator/plexanisync/questions.yaml
@@ -129,6 +129,7 @@ questions:
                 description: Your AniList.co token.
                 schema:
                   type: string
+                  max_length: 2000
                   required: true
                   private: true
                   default: ""
